--- a/AppBaru/src/app/app.component.html
+++ b/AppBaru/src/app/app.component.html
@@ -1,9 +1,10 @@
-<h1>News App</h1>
+<h1>NewsApp</h1>
 <hr/>
-  <ul>
-      <li><a routerLink="/news" routerLinkActive="terpilih">News</a></li>
-      <li><a routerLink="/users" routerLinkActive="terpilih">Users</a></li>
-  </ul>
+<ul>
+  <li><a routerLink="/home" routerLinkActive="terpilih" >News</a></li>
+  <li><a routerLink="/users" routerLinkActive="terpilih" >Users</a></li>
+</ul>
+<hr/>
 <router-outlet></router-outlet>
 <hr/>
 <h3>Footer</h3>
