--- a/AppBaru/src/app/users/user-list/user-list.component.html
+++ b/AppBaru/src/app/users/user-list/user-list.component.html
@@ -1,7 +1,9 @@
 <ul>
-    <li *ngFor="let user of dataUser">
+    <li *ngFor="let user of dataUser | async">
         <a [routerLink]="['/users', user.id]">
-        {{ user.nama }}
+        {{ user }}
         </a>
+        <button (click)="deleteUser(user.id)">Delete</button>
+        <a [routerLink]="['/users', user.id, 'edit']">Edit</a>
     </li>
 </ul>
